fix: Bug 77128 - calendar not fully visible when selecting link expiration date

--- a/packages/shared/components/share/Share.module.scss
+++ b/packages/shared/components/share/Share.module.scss
@@ -261,8 +261,8 @@
   }
 }
 
-.dropdown {
-  :global(.share-link_calendar) {
+.dropDown {
+  .shareCalendar {
     position: fixed;
   }
 }
